# Changelog

## [Unreleased]
- Fix menu rendering on SDL, Raylib, and OpenGL backends.

## [v0.57.13]
- Adjusted size metadata.
- Made the Unix README responsive.
- Fixed software renderer resize handling.
- Fixed the updater directory move on Unix.

## [v0.57.12]
- Fixed texture rendering across backends.
- Fixed atlas handle indexing across renderers.

## [v0.57.11]
- Improved thread safety around backend context texture handling.
- Applied hotfixes for context initialization issues.
- Avoided linking dependencies on SFML RenderStates defaults.
- Fixed menu atlas rendering in SDL and Raylib contexts.

## [v0.57.10]
- Fixed resize propagation and synchronized input polling.
- Fixed input coordinate handling and hid the menu during gameplay.
- Fixed thread-safe mouse queries in safe context helpers.

## [v0.57.8]
- Version bump only.

## [v0.57.7]
- Fixed software renderer texture sampling.
- Fixed Win32 mouse button polling mapping.
- Handled reused snake atlases without crashing.
- Updated the update script bug.
- Updated the version number to 0.57.7.
- Fixed atlas resizing for software and OpenGL contexts.
- Reverted the fix for context resize handling for OpenGL and software atlases.

## [v0.57.4]
- Aligned embedded contexts and wired sprite rendering.

## [v0.57.3]
- Unlocked semi-working contexts.
- Protected the input polling thread and released the SFML context.
- Ensured the main thread polls input state.

## [v0.57.0]
- Fixed stub context process signatures.
- Enabled only the working contexts in multiplexer builds.
- Fixed docking for SDL and Raylib contexts.
- Reverted keeping SDL and Raylib child windows docked in the multi-context manager.
- Ensured Raylib and SDL dock to child windows.
- Reverted ensuring Raylib and SDL dock to child windows after regressions.

## [v0.43.5]
- Converted the match-3 mini-game to the scene framework.
- Added scene-based sliding puzzle and minesweeper implementations.
- Updated image file paths.