@@ -1,0 +1,23 @@
+# AlmondShell Engine Analysis
+
+## Architecture Highlights
+- **Configurable Runtime Flags** – `include/aengineconfig.hpp` centralises renderer and context toggles (SDL, Raylib, OpenGL, software renderer) alongside headless/WinMain entry-point switches, making it the primary control surface for build-time composition.
+- **Versioned Core** – `include/aversion.hpp` exposes inline getters for the semantic version components, enabling compile-time inspection of the running revision.
+- **Context Management** – `src/acontext.cpp` and `include/acontextmultiplexer.hpp` orchestrate the per-backend render contexts and their window lifecycles, while `include/acontextwindow.hpp` encapsulates platform window data.
+- **Hot-Reload Pipeline** – `src/ascriptingsystem.cpp` drives compilation and loading of `.ascript.cpp` files via the task graph scheduler, handing control to `ScriptScheduler` nodes created in `include/ascriptingsystem.hpp`.
+
+## Observed Gaps
+- **Fragile Script Loading** – Before this update, missing script sources or compilation artefacts would silently cascade into load failures. The scripting system now validates inputs and outputs before attempting to load DLLs.
+- **Roadmap Traceability** – The existing `roadmap.txt` lacked granular prompts or acceptance checks per phase, making automation hand-offs hard to script.
+- **Testing Surface** – No automated smoke tests or CI hooks are defined for the critical updater and renderer paths, leaving regression risk high during phase transitions.
+
+## Recommended Focus Areas
+1. **Build & CI Hardening** – Introduce cross-platform CMake presets and GitHub Actions to execute `updater` builds plus smoke runs with each PR.
+2. **Renderer Regression Harness** – Build headless validation scenes that render deterministic atlas frames for OpenGL, Raylib, SDL, and the software backend.
+3. **Task Scheduler Profiling** – Instrument `include/aenginesystems.hpp` and the scheduler loop to trace coroutine stalls, especially during reload storms.
+4. **Documentation Automation** – Generate API references from headers and surface them via GitHub Pages to reduce onboarding friction.
+
+## Next-Step Prompt Template
+> "You are advancing AlmondShell through Phase {N} of the roadmap. Inspect the outstanding tasks for this phase, create a mini plan listing concrete PR-sized steps, implement them, and return a report with code diffs, tests, and docs updated."
+
+Use this template alongside the refreshed roadmap to keep future assistant runs aligned with the delivery cadence.
