@@ -32,7 +32,7 @@ namespace almondnamespace
     // Version information as constexpr for compile-time evaluation
     constexpr int major = 0;
     constexpr int minor = 57;
-    constexpr int revision = 14;
+    constexpr int revision = 15;
 
     static char version_string[32] = "";
     static char name_string[16] = "Almond Shell";
